library/src/libqlistwidget.h

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QWidget QWidget;
QListWidget* QListWidget_new(QWidget* parent);
QListWidget* QListWidget_new2();
QMetaObject* QListWidget_MetaObject(const QListWidget* self);
void* QListWidget_Metacast(QListWidget* self, const char* param1);
int QListWidget_Metacall(QListWidget* self, int param1, int param2, void** param3);
libqt_string QListWidget_Tr(const char* s);
void QListWidget_SetSelectionModel(QListWidget* self, QItemSelectionModel* selectionModel);
QListWidgetItem* QListWidget_Item(const QListWidget* self, int row);
int QListWidget_Row(const QListWidget* self, QListWidgetItem* item);
void QListWidget_InsertItem(QListWidget* self, int row, QListWidgetItem* item);
void QListWidget_InsertItem2(QListWidget* self, int row, libqt_string label);
void QListWidget_InsertItems(QListWidget* self, int row, libqt_list /* of libqt_string */ labels);
void QListWidget_AddItem(QListWidget* self, libqt_string label);
void QListWidget_AddItemWithItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_AddItems(QListWidget* self, libqt_list /* of libqt_string */ labels);
QListWidgetItem* QListWidget_TakeItem(QListWidget* self, int row);
int QListWidget_Count(const QListWidget* self);
QListWidgetItem* QListWidget_CurrentItem(const QListWidget* self);
void QListWidget_SetCurrentItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_SetCurrentItem2(QListWidget* self, QListWidgetItem* item, int command);
int QListWidget_CurrentRow(const QListWidget* self);
void QListWidget_SetCurrentRow(QListWidget* self, int row);
void QListWidget_SetCurrentRow2(QListWidget* self, int row, int command);
QListWidgetItem* QListWidget_ItemAt(const QListWidget* self, QPoint* p);
QListWidgetItem* QListWidget_ItemAt2(const QListWidget* self, int x, int y);
QRect* QListWidget_VisualItemRect(const QListWidget* self, QListWidgetItem* item);
void QListWidget_SortItems(QListWidget* self);
void QListWidget_SetSortingEnabled(QListWidget* self, bool enable);
bool QListWidget_IsSortingEnabled(const QListWidget* self);
void QListWidget_EditItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_OpenPersistentEditor(QListWidget* self, QListWidgetItem* item);
void QListWidget_ClosePersistentEditor(QListWidget* self, QListWidgetItem* item);
bool QListWidget_IsPersistentEditorOpen(const QListWidget* self, QListWidgetItem* item);
QWidget* QListWidget_ItemWidget(const QListWidget* self, QListWidgetItem* item);
void QListWidget_SetItemWidget(QListWidget* self, QListWidgetItem* item, QWidget* widget);
void QListWidget_RemoveItemWidget(QListWidget* self, QListWidgetItem* item);
libqt_list /* of QListWidgetItem* */ QListWidget_SelectedItems(const QListWidget* self);
libqt_list /* of QListWidgetItem* */ QListWidget_FindItems(const QListWidget* self, libqt_string text, int flags);
libqt_list /* of QListWidgetItem* */ QListWidget_Items(const QListWidget* self, QMimeData* data);
QModelIndex* QListWidget_IndexFromItem(const QListWidget* self, QListWidgetItem* item);
QListWidgetItem* QListWidget_ItemFromIndex(const QListWidget* self, QModelIndex* index);
void QListWidget_DropEvent(QListWidget* self, QDropEvent* event);
void QListWidget_ScrollToItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_Clear(QListWidget* self);
void QListWidget_ItemPressed(QListWidget* self, QListWidgetItem* item);
void QListWidget_ItemClicked(QListWidget* self, QListWidgetItem* item);
void QListWidget_ItemDoubleClicked(QListWidget* self, QListWidgetItem* item);
void QListWidget_ItemActivated(QListWidget* self, QListWidgetItem* item);
void QListWidget_ItemEntered(QListWidget* self, QListWidgetItem* item);
void QListWidget_ItemChanged(QListWidget* self, QListWidgetItem* item);
void QListWidget_CurrentItemChanged(QListWidget* self, QListWidgetItem* current, QListWidgetItem* previous);
void QListWidget_CurrentTextChanged(QListWidget* self, libqt_string currentText);
void QListWidget_CurrentRowChanged(QListWidget* self, int currentRow);
void QListWidget_ItemSelectionChanged(QListWidget* self);
bool QListWidget_Event(QListWidget* self, QEvent* e);
libqt_list /* of libqt_string */ QListWidget_MimeTypes(const QListWidget* self);
QMimeData* QListWidget_MimeData(const QListWidget* self, libqt_list /* of QListWidgetItem* */ items);
bool QListWidget_DropMimeData(QListWidget* self, int index, QMimeData* data, int action);
int QListWidget_SupportedDropActions(const QListWidget* self);
libqt_string QListWidget_Tr2(const char* s, const char* c);
libqt_string QListWidget_Tr3(const char* s, const char* c, int n);
void QListWidget_SortItems1(QListWidget* self, int order);
void QListWidget_ScrollToItem2(QListWidget* self, QListWidgetItem* item, int hint);