src/libqlistwidget.bf

public struct QListWidget
{
	[LinkName("QListWidget_new")]
	public static extern void* QListWidget_new(QWidget parent);
	[LinkName("QListWidget_new2")]
	public static extern void* QListWidget_new2();
	[LinkName("QListWidget_MetaObject")]
	public static extern QMetaObject QListWidget_MetaObject(void* c_this);
	[LinkName("QListWidget_Metacast")]
	public static extern void QListWidget_Metacast(void* c_this, char8[] param1);
	[LinkName("QListWidget_Metacall")]
	public static extern int32 QListWidget_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QListWidget_Tr")]
	public static extern char8[] QListWidget_Tr(char8[] s);
	[LinkName("QListWidget_SetSelectionModel")]
	public static extern void QListWidget_SetSelectionModel(void* c_this, QItemSelectionModel selectionModel);
	[LinkName("QListWidget_Item")]
	public static extern QListWidgetItem QListWidget_Item(void* c_this, int32 row);
	[LinkName("QListWidget_Row")]
	public static extern int32 QListWidget_Row(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_InsertItem")]
	public static extern void QListWidget_InsertItem(void* c_this, int32 row, QListWidgetItem item);
	[LinkName("QListWidget_InsertItem2")]
	public static extern void QListWidget_InsertItem2(void* c_this, int32 row, char8[] label);
	[LinkName("QListWidget_InsertItems")]
	public static extern void QListWidget_InsertItems(void* c_this, int32 row, char8[][] labels);
	[LinkName("QListWidget_AddItem")]
	public static extern void QListWidget_AddItem(void* c_this, char8[] label);
	[LinkName("QListWidget_AddItemWithItem")]
	public static extern void QListWidget_AddItemWithItem(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_AddItems")]
	public static extern void QListWidget_AddItems(void* c_this, char8[][] labels);
	[LinkName("QListWidget_TakeItem")]
	public static extern QListWidgetItem QListWidget_TakeItem(void* c_this, int32 row);
	[LinkName("QListWidget_Count")]
	public static extern int32 QListWidget_Count(void* c_this);
	[LinkName("QListWidget_CurrentItem")]
	public static extern QListWidgetItem QListWidget_CurrentItem(void* c_this);
	[LinkName("QListWidget_SetCurrentItem")]
	public static extern void QListWidget_SetCurrentItem(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_SetCurrentItem2")]
	public static extern void QListWidget_SetCurrentItem2(void* c_this, QListWidgetItem item, int64 command);
	[LinkName("QListWidget_CurrentRow")]
	public static extern int32 QListWidget_CurrentRow(void* c_this);
	[LinkName("QListWidget_SetCurrentRow")]
	public static extern void QListWidget_SetCurrentRow(void* c_this, int32 row);
	[LinkName("QListWidget_SetCurrentRow2")]
	public static extern void QListWidget_SetCurrentRow2(void* c_this, int32 row, int64 command);
	[LinkName("QListWidget_ItemAt")]
	public static extern QListWidgetItem QListWidget_ItemAt(void* c_this, QPoint p);
	[LinkName("QListWidget_ItemAt2")]
	public static extern QListWidgetItem QListWidget_ItemAt2(void* c_this, int32 x, int32 y);
	[LinkName("QListWidget_VisualItemRect")]
	public static extern QRect QListWidget_VisualItemRect(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_SortItems")]
	public static extern void QListWidget_SortItems(void* c_this);
	[LinkName("QListWidget_SetSortingEnabled")]
	public static extern void QListWidget_SetSortingEnabled(void* c_this, bool enable);
	[LinkName("QListWidget_IsSortingEnabled")]
	public static extern bool QListWidget_IsSortingEnabled(void* c_this);
	[LinkName("QListWidget_EditItem")]
	public static extern void QListWidget_EditItem(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_OpenPersistentEditor")]
	public static extern void QListWidget_OpenPersistentEditor(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ClosePersistentEditor")]
	public static extern void QListWidget_ClosePersistentEditor(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_IsPersistentEditorOpen")]
	public static extern bool QListWidget_IsPersistentEditorOpen(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemWidget")]
	public static extern QWidget QListWidget_ItemWidget(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_SetItemWidget")]
	public static extern void QListWidget_SetItemWidget(void* c_this, QListWidgetItem item, QWidget widget);
	[LinkName("QListWidget_RemoveItemWidget")]
	public static extern void QListWidget_RemoveItemWidget(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_SelectedItems")]
	public static extern QListWidgetItem[] QListWidget_SelectedItems(void* c_this);
	[LinkName("QListWidget_FindItems")]
	public static extern QListWidgetItem[] QListWidget_FindItems(void* c_this, char8[] text, int64 flags);
	[LinkName("QListWidget_Items")]
	public static extern QListWidgetItem[] QListWidget_Items(void* c_this, QMimeData data);
	[LinkName("QListWidget_IndexFromItem")]
	public static extern QModelIndex QListWidget_IndexFromItem(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemFromIndex")]
	public static extern QListWidgetItem QListWidget_ItemFromIndex(void* c_this, QModelIndex index);
	[LinkName("QListWidget_DropEvent")]
	public static extern void QListWidget_DropEvent(void* c_this, QDropEvent event);
	[LinkName("QListWidget_ScrollToItem")]
	public static extern void QListWidget_ScrollToItem(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_Clear")]
	public static extern void QListWidget_Clear(void* c_this);
	[LinkName("QListWidget_ItemPressed")]
	public static extern void QListWidget_ItemPressed(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemClicked")]
	public static extern void QListWidget_ItemClicked(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemDoubleClicked")]
	public static extern void QListWidget_ItemDoubleClicked(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemActivated")]
	public static extern void QListWidget_ItemActivated(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemEntered")]
	public static extern void QListWidget_ItemEntered(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_ItemChanged")]
	public static extern void QListWidget_ItemChanged(void* c_this, QListWidgetItem item);
	[LinkName("QListWidget_CurrentItemChanged")]
	public static extern void QListWidget_CurrentItemChanged(void* c_this, QListWidgetItem current, QListWidgetItem previous);
	[LinkName("QListWidget_CurrentTextChanged")]
	public static extern void QListWidget_CurrentTextChanged(void* c_this, char8[] currentText);
	[LinkName("QListWidget_CurrentRowChanged")]
	public static extern void QListWidget_CurrentRowChanged(void* c_this, int32 currentRow);
	[LinkName("QListWidget_ItemSelectionChanged")]
	public static extern void QListWidget_ItemSelectionChanged(void* c_this);
	[LinkName("QListWidget_Event")]
	public static extern bool QListWidget_Event(void* c_this, QEvent e);
	[LinkName("QListWidget_MimeTypes")]
	public static extern char8[][] QListWidget_MimeTypes(void* c_this);
	[LinkName("QListWidget_MimeData")]
	public static extern QMimeData QListWidget_MimeData(void* c_this, QListWidgetItem[] items);
	[LinkName("QListWidget_DropMimeData")]
	public static extern bool QListWidget_DropMimeData(void* c_this, int32 index, QMimeData data, int64 action);
	[LinkName("QListWidget_SupportedDropActions")]
	public static extern int64 QListWidget_SupportedDropActions(void* c_this);
	[LinkName("QListWidget_Tr2")]
	public static extern char8[] QListWidget_Tr2(char8[] s, char8[] c);
	[LinkName("QListWidget_Tr3")]
	public static extern char8[] QListWidget_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QListWidget_SortItems1")]
	public static extern void QListWidget_SortItems1(void* c_this, int64 order);
	[LinkName("QListWidget_ScrollToItem2")]
	public static extern void QListWidget_ScrollToItem2(void* c_this, QListWidgetItem item, int64 hint);
}